[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/indy/speech4c.png" type="Texture" id=1]
[ext_resource path="res://assets/indy/speech5.png" type="Texture" id=2]
[ext_resource path="res://assets/btn1a.png" type="Texture" id=3]
[ext_resource path="res://assets/btn1b.png" type="Texture" id=4]
[ext_resource path="res://assets/btn1c.png" type="Texture" id=5]
[ext_resource path="res://assets/btn2c.png" type="Texture" id=6]
[ext_resource path="res://assets/btn3b.png" type="Texture" id=7]
[ext_resource path="res://assets/btn3a.png" type="Texture" id=8]
[ext_resource path="res://assets/btn3c.png" type="Texture" id=9]
[ext_resource path="res://assets/btn2a.png" type="Texture" id=10]
[ext_resource path="res://assets/btn2b.png" type="Texture" id=11]
[ext_resource path="res://fonts/DeterminationMonoWebRegular-Z5oq.tres" type="DynamicFont" id=12]
[ext_resource path="res://scripts/SpeechBubble.gd" type="Script" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 16, 17 )
margin_left = 7.0
margin_right = 7.0
margin_top = 7.0
margin_bottom = 7.0

[node name="SpeechBubble" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = -139.0
margin_top = -54.0
margin_right = 111.0
margin_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 40 )
custom_styles/panel = SubResource( 1 )

[node name="Tail" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -1.0
margin_right = 7.0
margin_bottom = 17.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Tail2" type="TextureRect" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -48.0
margin_right = 7.0
margin_bottom = -30.0
texture = ExtResource( 2 )
stretch_mode = 2
flip_v = true

[node name="Text" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -25.0
margin_bottom = -5.0
rect_clip_content = true
__meta__ = {
"_edit_group_": true
}

[node name="Text" type="RichTextLabel" parent="Panel/Text"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = 91.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 12 )
text = "Welcome to LUCASIO, Se√±or Jones! My name's Bonifacio.
If you're having trouble playing the game, talk to me again, and I'll give you some hints..."
fit_content_height = true
scroll_active = false

[node name="BtnUp" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -53.0
margin_right = -5.0
margin_bottom = -37.0
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 6 )

[node name="BtnDown" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -37.0
margin_right = -5.0
margin_bottom = -21.0
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 9 )

[node name="BtnContinue" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -21.0
margin_right = -5.0
margin_bottom = -5.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[connection signal="pressed" from="Panel/BtnUp" to="." method="_on_BtnUp_pressed"]
[connection signal="pressed" from="Panel/BtnDown" to="." method="_on_BtnDown_pressed"]
[connection signal="pressed" from="Panel/BtnContinue" to="." method="_on_BtnContinue_pressed"]
